--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
       <aside id="side-content">
         <h3>Interesting Articles</h3>
         <ol id="news">
-          <li><a href="#">Article 1</a><div><p>Preview of very interesting article article</p></div></li>
-          <li><a href="#">Article 2</a><div><p>Preview of very interesting article article</p></div></li>
-          <li><a href="#">Article 3</a><div><p>Preview of very interesting article article</p></div></li>
-          <li><a href="#">Article 4</a><div><p>Preview of very interesting article article</p></div></li>
+          <li><a href="#">Article 1</a><div><p>Preview of very interesting article</p></div></li>
+          <li><a href="#">Article 2</a><div><p>Preview of very interesting article</p></div></li>
+          <li><a href="#">Article 3</a><div><p>Preview of very interesting article</p></div></li>
+          <li><a href="#">Article 4</a><div><p>Preview of very interesting article</p></div></li>
         </ol>
       </aside>
     </main>
