--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zxx">
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
@@ -12,23 +12,23 @@
 <body>
   <div id="page-wrapper">
     <header id="header">
-      <a id="logo1" href="index.html"><img src="images/logo3.png" alt=" red Acme logo"></a>
-	  <h1>My Demo Site</h1>
-	  <a id="toplink" href="https://www.fileformat.info/info/unicode/char/2699/index.htm">&#9881;</a>
+      <a id="logo1" href="index.html"><img src="images/logo3.png" alt="Acme logo, large and in red"></a>
+      <h1>My Demo Site</h1>
+      <a id="toplink" href="https://www.fileformat.info/info/unicode/char/2699/index.htm">&#9881;</a>
     </header>
     <nav id="main-nav">
       <ul>
-	    <li><a href="http://www.iit.edu">IIT Home</a></li>
-	    <li><a href="http://www.google.com">Google</a></li>
-	    <li><a href="http://www.microsoft.com">Microsoft</a></li>
-  	    <li><a href="http://www.cnn.com">CNN</a></li>
-	    <li><a href="http://admissions.iit.edu">IIT Admissions</a></li>
+        <li><a href="http://www.iit.edu">IIT Home</a></li>
+        <li><a href="http://www.google.com">Google</a></li>
+        <li><a href="http://www.microsoft.com">Microsoft</a></li>
+        <li><a href="http://www.cnn.com">CNN</a></li>
+        <li><a href="http://admissions.iit.edu">IIT Admissions</a></li>
       </ul>
     </nav>
     <main id="content-wrapper">
       <div id="main-content">
         <h2><strong>This is our h2 Tag</strong></h2>
-        <img class="image" src="images/main.png" alt="Main Squeeze Juice Company logo in black and white">
+        <img class="imageR" src="images/main.png" alt="Logo for Main Squeeze Juice Company in black and white">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, perferendis, sed ab sequi molestias eum sint consectetur dicta praesentium ipsa repellat soluta placeat dolor! Accusantium impedit est explicabo harum aperiam!</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, perferendis, sed ab sequi molestias eum sint consectetur dicta praesentium ipsa repellat soluta placeat dolor! Accusantium impedit est explicabo harum aperiam!</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, perferendis, sed ab sequi molestias eum sint consectetur dicta praesentium ipsa repellat soluta placeat dolor! Accusantium impedit est explicabo harum aperiam!</p>
@@ -41,28 +41,28 @@
         </ul>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, perferendis, sed ab sequi molestias eum sint consectetur dicta praesentium ipsa repellat soluta placeat dolor! Accusantium impedit est explicabo harum aperiam!</p>
         <ul id="bul2">
-		  <li>List 1</li>
-		  <li>List 2</li>
-		  <li>List 3</li>
-		  <li>List 4</li>
-		</ul>
+          <li>List 1</li>
+          <li>List 2</li>
+          <li>List 3</li>
+          <li>List 4</li>
+        </ul>
         <div id="center">
-          <iframe width="400" height="300" src="https://www.youtube.com/embed/-jn9aaNn8_I?si=D1HhLAWQ5awY9BfU" allowfullscreen></iframe>
+          <iframe width="400" height="300" src="https://www.youtube.com/embed/-jn9aaNn8_I?si=D1HhLAWQ5awY9BfU" frameborder="0" allowfullscreen></iframe>
         </div>
       </div>
       <aside id="side-content">
         <h3>Interesting Articles</h3>
         <ol id="news">
-          <li><a href="#">Article 1</a><div><p>Preview of very interesting article</p></div></li>
-          <li><a href="#">Article 2</a><div><p>Preview of very interesting article</p></div></li>
-          <li><a href="#">Article 3</a><div><p>Preview of very interesting article</p></div></li>
-          <li><a href="#">Article 4</a><div><p>Preview of very interesting article</p></div></li>
+          <li><a href="#">Article 1</a><div><p>Preview of very interesting article article</p></div></li>
+          <li><a href="#">Article 2</a><div><p>Preview of very interesting article article</p></div></li>
+          <li><a href="#">Article 3</a><div><p>Preview of very interesting article article</p></div></li>
+          <li><a href="#">Article 4</a><div><p>Preview of very interesting article article</p></div></li>
         </ol>
       </aside>
     </main>
     <footer id="footer">
-	  <p>Footer Content is here</p>
-	</footer>
+      <p>Footer Content is here</p>
+    </footer>
   </div>
 </body>
 
